tests/NormalTests/paczka2/big_fuzzy/33626933.err
Error in line 2: kj4mn5Zni1 S700 35,4
Error in line 8: S185 S609 50,1
Error in line 21: 8qwLP6ThRnE S609 73,1
Error in line 29: 8qwLP6ThRnE S700 73,5
Error in line 31: 8qwLP6ThRnE S185 1,7
Error in line 55: kj4mn5Zni1 S676 55,2
Error in line 62: b8l9dxkd S676 78,2
Error in line 72: b8l$dxkd S60$ 86,$
Error in line 78: HLA7meHD S700 94,3
Error in line 84: 8qwLP6ThRnE S700 91,1
Error in line 88: 8qwLP6ThRnE S676 46,8
Error in line 79: S185 S609 226,9
Error in line 92: kj4mn5Zni1 S700 95,5
Error in line 93: HLA7meHD S700 54,5
Error in line 89: 8qwLP6ThRnE S185 94,2
Error in line 100: 8qwLP6ThRnE S676 89,7
Error in line 109: 8qwLP6ThRnE S609 53,0
Error in line 114: 8qwLP6ThRnE S185 13,4
Error in line 112: edIUXohVCO5 S185 100,3
Error in line 119: 8qwLP6ThRnE S700 56,1
Error in line 131: 8qwLP6ThRnE S609 49,4
Error in line 132: 8qwLP6ThRnE S185 21,1
Error in line 134: b8l9dxkd S676 10,6
Error in line 137: 8qwLP6ThRnE S676 19,4
Error in line 156: D6nRIQ6 S700 71,3
Error in line 160: b8l9dxkd S609 20,5
Error in line 161: b8l9dxkd S676 17,2
Error in line 158: S185 S609 313,8
Error in line 179: 8qwLP6ThRnE S700 82,8
Error in line 181: S185 S676 20,4
Error in line 200: S185 S700 86,5
Error in line 191: b8l9dxkd S700 38,5
Error in line 205: D[nRIQ[ S700 51,9
Error in line 203: D6nRIQ6 S676 7,7
Error in line 211: D6nRIQ6 S700 203,4
Error in line 214: D6nRIQ6 S185 96,5
Error in line 226: b8l9dxkd S700 51,7
Error in line 228: 8qwLP6ThRnE S609 185,1
